--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -17,7 +17,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">Our Projects</h1>
-  {% image './src/images/projectsbannerimg.png', 'fence installation projects', '',
+  {% image './src/images/landing.png', 'fence installation projects', '',
   'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
