--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ eleventyNavigation:
 
 <section id="hero">
   <video autoplay muted loop playsinline class="cs-picture">
-    <source src="/images/hero_vid.mov" type="video/mp4" autoplay muted loop playsinline />
+    <source src="/images/hero_vid.mp4" type="video/mp4" autoplay muted loop playsinline />
     Your browser does not support the video tag.
   </video>
   <div class="cs-overlay"></div>
@@ -32,7 +32,7 @@ eleventyNavigation:
         your property’s security and beauty. Serving Kalamazoo and surrounding areas, we combine skilled craftsmanship
         with durable materials for results that stand the test of time.
       </p>
-      <a href="/services/" class="cs-button-solid">Explore Services</a>
+      <a href="/wood-privacy-fences/" class="cs-button-solid">Explore Services</a>
       <a href="/about/" class="cs-button-transparent">
         <img class="cs-img" loading="lazy" decoding="async"
           src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg" alt="play icon" width="17" height="17" />
@@ -86,7 +86,7 @@ eleventyNavigation:
 <section id="sbs">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/about_img_0.webp', 'fence installation service', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/about_img_0.png', 'fence installation service', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
@@ -136,7 +136,7 @@ eleventyNavigation:
         Our commitment to using top-quality materials and providing professional, timely service sets us apart. We treat
         every property like it’s our own, delivering results you can count on.
       </p>
-      <a href="/services/" class="button-solid">
+      <a href="/wood-privacy-fences/" class="button-solid">
         Learn More About Our Services →
       </a>
     </div>
