completed first set of client changes

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,7 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="hero">
-  <video autoplay muted loop playsinline class="cs-picture">
-    <source src="/images/hero_vid.mp4" type="video/mp4" autoplay muted loop playsinline />
-    Your browser does not support the video tag.
-  </video>
+      {% image './src/images/hero_home.jpg', 'fence contractor in Kalamazoo', 'cs-picture', 'lazy'%}
   <div class="cs-overlay"></div>
   <div class="cs-container">
     <div class="cs-flex-group">
@@ -86,7 +83,7 @@ eleventyNavigation:
 <section id="sbs">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'fence installation service', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/about_img_0.jpg', 'fence installation service', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
@@ -123,7 +120,7 @@ eleventyNavigation:
 <section id="sbs-r">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/featured_img_0.png', 'fence contractor in Kalamazoo', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/featured_img_0.jpg', 'fence contractor in Kalamazoo', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">Quality You Can Trust</span>
