--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -16,7 +16,7 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-  <h1 id="home-h">Our Projects</h1>
+  <h1 id="home-h">Finished Projects</h1>
   {% image './src/images/landing.png', 'fence installation projects', '',
   'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
@@ -48,7 +48,7 @@ eleventyNavigation:
       </div>
       <!-- Row 3 -->
       <div class="cs-row cs-row-3">
-        {% image './src/images/portfolio/port-7.webp', 'residential front yard fence',
+        {% image './src/images/portfolio/port-7.jpg', 'residential front yard fence',
         'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%} 
         {% image './src/images/portfolio/port-8.webp', 'custom wood gate installation',
         'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
