--- a/src/pages/servicepages/vinyl-fencing.html
+++ b/src/pages/servicepages/vinyl-fencing.html
@@ -4,7 +4,7 @@ description: "Durable, Low-Maintenance Vinyl Fencing Solutions in Kalamazoo and 
 metaTitle: "Michigan Fencing Solutions | Vinyl Fence Installation"
 tagTitle: "Vinyl Fence Installation Services"
 title: "Vinyl Fencing in Kalamazoo, MI"
-preloadImg: "/images/vinyl_banner.png"
+preloadImg: "/images/vinyl_banner.jpg"
 preloadCSS: "/css/services.css"
 permalink: "/vinyl-fencing/"
 eleventyNavigation:
@@ -20,9 +20,9 @@ order: 700
 <section id="int-hero">
   <h1 id="home-h">Premium Vinyl Fencing Installation</h1>
   <picture class="cs-background">
-    <source media="(max-width: 600px)" srcset="/images/vinyl_banner.png" />
-    <source media="(min-width: 601px)" srcset="/images/vinyl_banner.png" />
-    <img decoding="async" src="/images/vinyl_banner.png" alt="vinyl fencing banner" width="1280" height="568"
+    <source media="(max-width: 600px)" srcset="/images/vinyl_banner.jpg" />
+    <source media="(min-width: 601px)" srcset="/images/vinyl_banner.jpg" />
+    <img decoding="async" src="/images/vinyl_banner.jpg" alt="vinyl fencing banner" width="1280" height="568"
       aria-hidden="true" />
   </picture>
 </section>
@@ -36,9 +36,9 @@ order: 700
     <div class="cs-image-group">
       <div class="cs-flex">
         <picture class="cs-background">
-          <source media="(max-width: 600px)" srcset="/images/vinyl_0.png" />
-          <source media="(min-width: 601px)" srcset="/images/vinyl_0.png" />
-          <img loading="lazy" decoding="async" src="/images/vinyl_0.png" alt="vinyl fence installation in Kalamazoo"
+          <source media="(max-width: 600px)" srcset="/images/vinyl_0.jpg" />
+          <source media="(min-width: 601px)" srcset="/images/vinyl_0.jpg" />
+          <img loading="lazy" decoding="async" src="/images/vinyl_0.jpg" alt="vinyl fence installation in Kalamazoo"
             width="542" height="728" />
         </picture>
         <div class="cs-box">
@@ -124,9 +124,9 @@ order: 700
 <section id="services-563">
   <div class="cs-container">
     <picture class="cs-picture">
-      <source media="(max-width: 600px)" srcset="/images/vinyl_1.png" />
-      <source media="(min-width: 601px)" srcset="/images/vinyl_1.png" />
-      <img loading="lazy" decoding="async" src="/images/vinyl_1.png" alt="vinyl fencing services Kalamazoo" width="630"
+      <source media="(max-width: 600px)" srcset="/images/vinyl_1.jpg" />
+      <source media="(min-width: 601px)" srcset="/images/vinyl_1.jpg" />
+      <img loading="lazy" decoding="async" src="/images/vinyl_1.jpg" alt="vinyl fencing services Kalamazoo" width="630"
         height="528" aria-hidden="true" />
     </picture>
     <div class="cs-content">
