--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -29,7 +29,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'fence installation in progress',
+      {% image './src/images/about_img_0.jpg', 'fence installation in progress',
       'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
