--- a/src/pages/servicepages/deck-repair.html
+++ b/src/pages/servicepages/deck-repair.html
@@ -4,7 +4,7 @@ description: "Professional Deck Repair Services in Kalamazoo, MI"
 metaTitle: "Michigan Fencing Solutions | Deck Repair"
 tagTitle: "Deck Repair"
 title: "Deck Repair"
-preloadImg: "/images/deckrepair_banner.png"
+preloadImg: "/images/deckrepair_banner.jpg"
 preloadCSS: "/css/services.css"
 permalink: "/deck-repair/"
 eleventyNavigation:
@@ -20,9 +20,9 @@ order: 100
 <section id="int-hero">
     <h1 id="home-h">Deck Repair Services</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/deckrepair_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/deckrepair_banner.png" />
-        <img decoding="async" src="/images/deckrepair_banner.png" alt="deck repair service banner" width="1280"
+        <source media="(max-width: 600px)" srcset="/images/deckrepair_banner.jpg" />
+        <source media="(min-width: 601px)" srcset="/images/deckrepair_banner.jpg" />
+        <img decoding="async" src="/images/deckrepair_banner.jpg" alt="deck repair service banner" width="1280"
             height="568" aria-hidden="true" />
     </picture>
 </section>
@@ -36,9 +36,9 @@ order: 100
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/deckrepair_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/deckrepair_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/deckrepair_0.png" alt="deck restoration"
+                    <source media="(max-width: 600px)" srcset="/images/deckrepair_0.jpg" />
+                    <source media="(min-width: 601px)" srcset="/images/deckrepair_0.jpg" />
+                    <img loading="lazy" decoding="async" src="/images/deckrepair_0.jpg" alt="deck restoration"
                         width="542" height="728" />
                 </picture>
                 <div class="cs-box">
@@ -123,9 +123,9 @@ order: 100
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/deckrepair_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/deckrepair_1.png" />
-            <img loading="lazy" decoding="async" src="/images/deckrepair_1.png" alt="deck repair service" width="630"
+            <source media="(max-width: 600px)" srcset="/images/deckrepair_1.jpg" />
+            <source media="(min-width: 601px)" srcset="/images/deckrepair_1.jpg" />
+            <img loading="lazy" decoding="async" src="/images/deckrepair_1.jpg" alt="deck repair service" width="630"
                 height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
