--- a/src/pages/servicepages/wood-privacy-fences.html
+++ b/src/pages/servicepages/wood-privacy-fences.html
@@ -4,7 +4,7 @@ description: "Durable and Custom Wood Privacy Fence Installation in Kalamazoo, M
 metaTitle: "Michigan Fencing Solutions | Wood Privacy Fences"
 tagTitle: "Wood Privacy Fence Installation"
 title: "Wood Privacy Fences"
-preloadImg: "/images/wood_fence_banner.png"
+preloadImg: "/images/wood_fence_banner.jpg"
 preloadCSS: "/css/services.css"
 permalink: "/wood-privacy-fences/"
 eleventyNavigation:
@@ -20,9 +20,9 @@ order: 100
 <section id="int-hero">
     <h1 id="home-h">Wood Privacy Fence Installation</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/wood_fence_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/wood_fence_banner.png" />
-        <img decoding="async" src="/images/wood_fence_banner.png" alt="wood privacy fence banner" width="1280"
+        <source media="(max-width: 600px)" srcset="/images/wood_fence_banner.jpg" />
+        <source media="(min-width: 601px)" srcset="/images/wood_fence_banner.jpg" />
+        <img decoding="async" src="/images/wood_fence_banner.jpg" alt="wood privacy fence banner" width="1280"
             height="568" aria-hidden="true" />
     </picture>
 </section>
@@ -36,9 +36,9 @@ order: 100
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/wood_fence_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/wood_fence_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/wood_fence_0.png" alt="custom wood privacy fence"
+                    <source media="(max-width: 600px)" srcset="/images/wood_fence_0.jpg" />
+                    <source media="(min-width: 601px)" srcset="/images/wood_fence_0.jpg" />
+                    <img loading="lazy" decoding="async" src="/images/wood_fence_0.jpg" alt="custom wood privacy fence"
                         width="542" height="728" />
                 </picture>
                 <div class="cs-box">
@@ -126,9 +126,9 @@ order: 100
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/wood_fence_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/wood_fence_1.png" />
-            <img loading="lazy" decoding="async" src="/images/wood_fence_1.png" alt="wood privacy fence installation"
+            <source media="(max-width: 600px)" srcset="/images/wood_fence_1.jpg" />
+            <source media="(min-width: 601px)" srcset="/images/wood_fence_1.jpg" />
+            <img loading="lazy" decoding="async" src="/images/wood_fence_1.jpg" alt="wood privacy fence installation"
                 width="630" height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
