updated before and after page

--- a/src/pages/before_and_after.html
+++ b/src/pages/before_and_after.html
@@ -27,35 +27,25 @@ eleventyNavigation:
 
 <section id="gallery">
   <div class="cs-container">
-    <div class="cs-image-group">
-      <!-- Row 1-->
-      <div class="cs-row cs-row-1">
-        {% image './src/images/before-and-after/deck.jpg', 'wood privacy fence installation',
-        'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%} 
-        <!-- {% image './src/images/before-and-after/fence.jpg', 'commercial chain link fence',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
-        {% image './src/images/before-and-after/floor.jpg', 'commercial chain link fence',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}  -->
+    <h2 class="title">Before and After</h2>
+      <div class="before-and-after-container">
+        {% image './src/images/before-and-after/fencebefore.jpg', 'fence installation projects', '',
+      'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+        {% image './src/images/before-and-after/fenceafter.jpg', 'fence installation projects', '',
+      'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
       </div>
-      <!-- Row 2 -->
-      <div class="cs-row cs-row-2">
-        {% image './src/images/before-and-after/fence.jpg', 'commercial chain link fence',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
-        <!-- {% image './src/images/portfolio/port-5.webp', 'decorative metal fencing',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port-6.webp', 'decorative metal fencing',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} -->
+      <div class="before-and-after-container">
+        {% image './src/images/before-and-after/deckbefore.jpg', 'fence installation projects', '',
+      'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+        {% image './src/images/before-and-after/deckafter.jpg', 'fence installation projects', '',
+      'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
       </div>
-      <!-- Row 3 -->
-      <div class="cs-row cs-row-3">
-        {% image './src/images/before-and-after/floor.jpg', 'commercial chain link fence',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
-        <!-- {% image './src/images/portfolio/port-8.webp', 'custom wood gate installation',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
-        {% image './src/images/portfolio/port-9.webp', 'custom wood gate installation',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}  -->
+      <div class="before-and-after-container">
+        {% image './src/images/before-and-after/floorbefore.jpg', 'fence installation projects', '',
+      'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+        {% image './src/images/before-and-after/floorafter.jpg', 'fence installation projects', '',
+      'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
       </div>
-    </div>
     <a href="/contact" class="button-solid">Get Free Quote</a>
   </div>
 </section>
