--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -32,7 +32,7 @@ eleventyNavigation:
       <div class="cs-row cs-row-1">
         {% image './src/images/portfolio/port-1.webp', 'wood privacy fence installation',
         'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%} 
-        {% image './src/images/portfolio/port-2.webp', 'commercial chain link fence',
+        {% image './src/images/portfolio/port-7.jpg', 'commercial chain link fence',
         'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
         {% image './src/images/portfolio/port-3.webp', 'commercial chain link fence',
         'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
@@ -48,7 +48,7 @@ eleventyNavigation:
       </div>
       <!-- Row 3 -->
       <div class="cs-row cs-row-3">
-        {% image './src/images/portfolio/port-7.jpg', 'residential front yard fence',
+        {% image './src/images/portfolio/port-2.jpg', 'residential front yard fence',
         'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%} 
         {% image './src/images/portfolio/port-8.webp', 'custom wood gate installation',
         'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
