worked on requested changes

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="hero">
-      {% image './src/images/hero_home.jpg', 'fence contractor in Kalamazoo', 'cs-picture', 'lazy'%}
+      {% image './src/images/hero_img.jpg', 'fence contractor in Kalamazoo', 'cs-picture', 'lazy'%}
   <div class="cs-overlay"></div>
   <div class="cs-container">
     <div class="cs-flex-group">
