--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="hero">
-      {% image './src/images/hero_img.jpg', 'fence contractor in Kalamazoo', 'cs-picture', 'lazy'%}
+  <!-- {% image './src/images/hero_img.png', 'fence contractor in Kalamazoo', 'cs-picture', 'lazy'%} -->
+  <video autoplay muted loop playsinline class="cs-picture">
+    <source src="/images/hero_vid.mp4" type="video/mp4" autoplay muted loop playsinline />
+    Your browser does not support the video tag.
+  </video>
   <div class="cs-overlay"></div>
   <div class="cs-container">
     <div class="cs-flex-group">
