added fallback image to hero section

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@ eleventyNavigation:
 
 <section id="hero">
   <!-- {% image './src/images/hero_img.png', 'fence contractor in Kalamazoo', 'cs-picture', 'lazy'%} -->
-  <video autoplay muted loop playsinline class="cs-picture">
-    <source src="/images/hero_vid.mp4" type="video/mp4" autoplay muted loop playsinline />
+  <video autoplay muted loop playsinline class="cs-picture" poster="/images/hero_img.png">
+    <source src="/images/hero_vid.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
   <div class="cs-overlay"></div>
